// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/lib/buildRelationReferences.js basic schemas 1`] = `
Array [
  Object {
    "destinationSchemaId": "12345",
    "id": "6d7063cb-fc0a-43cf-bfd9-a90ef4c9f410",
    "identifiers": Object {
      "destination": Object {
        "alias": Object {
          "plural": Object {
            "camel": "directors",
            "kebab": "directors",
            "label": "Directors",
            "pascal": "Directors",
            "snake": "directors",
          },
          "singular": Object {
            "camel": "director",
            "kebab": "director",
            "label": "Director",
            "pascal": "Director",
            "snake": "director",
          },
        },
        "canonical": Object {
          "plural": Object {
            "camel": "users",
            "kebab": "users",
            "label": "Users",
            "pascal": "Users",
            "snake": "users",
          },
          "singular": Object {
            "camel": "user",
            "kebab": "user",
            "label": "User",
            "pascal": "User",
            "snake": "user",
          },
        },
      },
      "source": Object {
        "alias": Object {
          "plural": Object {
            "camel": "directedMovies",
            "kebab": "directed-movies",
            "label": "Directed Movies",
            "pascal": "DirectedMovies",
            "snake": "directed_movies",
          },
          "singular": Object {
            "camel": "directedMovie",
            "kebab": "directed-movie",
            "label": "Directed Movie",
            "pascal": "DirectedMovie",
            "snake": "directed_movie",
          },
        },
        "canonical": Object {
          "plural": Object {
            "camel": "movies",
            "kebab": "movies",
            "label": "Movies",
            "pascal": "Movies",
            "snake": "movies",
          },
          "singular": Object {
            "camel": "movie",
            "kebab": "movie",
            "label": "Movie",
            "pascal": "Movie",
            "snake": "movie",
          },
        },
      },
    },
    "sourceRelationId": "relation-example-01",
    "sourceSchemaId": "45678",
    "type": "BELONGS_TO",
  },
]
`;

exports[`/lib/inflateSchema.js basic schemas 1`] = `
Object {
  "attributes": Array [],
  "configuration": Object {},
  "id": "12345",
  "identifiers": Object {
    "plural": Object {
      "camel": "users",
      "kebab": "users",
      "label": "Users",
      "pascal": "Users",
      "snake": "users",
    },
    "singular": Object {
      "camel": "user",
      "kebab": "user",
      "label": "User",
      "pascal": "User",
      "snake": "user",
    },
  },
  "references": Array [
    Object {
      "destinationSchemaId": "12345",
      "id": "cfd1b129-33c6-49cc-832d-bab5e9be4523",
      "identifiers": Object {
        "destination": Object {
          "alias": Object {
            "plural": Object {
              "camel": "directors",
              "kebab": "directors",
              "label": "Directors",
              "pascal": "Directors",
              "snake": "directors",
            },
            "singular": Object {
              "camel": "director",
              "kebab": "director",
              "label": "Director",
              "pascal": "Director",
              "snake": "director",
            },
          },
          "canonical": Object {
            "plural": Object {
              "camel": "users",
              "kebab": "users",
              "label": "Users",
              "pascal": "Users",
              "snake": "users",
            },
            "singular": Object {
              "camel": "user",
              "kebab": "user",
              "label": "User",
              "pascal": "User",
              "snake": "user",
            },
          },
        },
        "source": Object {
          "alias": Object {
            "plural": Object {
              "camel": "directedMovies",
              "kebab": "directed-movies",
              "label": "Directed Movies",
              "pascal": "DirectedMovies",
              "snake": "directed_movies",
            },
            "singular": Object {
              "camel": "directedMovie",
              "kebab": "directed-movie",
              "label": "Directed Movie",
              "pascal": "DirectedMovie",
              "snake": "directed_movie",
            },
          },
          "canonical": Object {
            "plural": Object {
              "camel": "movies",
              "kebab": "movies",
              "label": "Movies",
              "pascal": "Movies",
              "snake": "movies",
            },
            "singular": Object {
              "camel": "movie",
              "kebab": "movie",
              "label": "Movie",
              "pascal": "Movie",
              "snake": "movie",
            },
          },
        },
      },
      "sourceRelationId": "relation-example-01",
      "sourceSchemaId": "45678",
      "type": "BELONGS_TO",
    },
  ],
  "relations": Array [],
}
`;

exports[`/lib/inflateSchemas.js basic schemas 1`] = `
Array [
  Object {
    "attributes": Array [],
    "configuration": Object {},
    "id": "12345",
    "identifiers": Object {
      "plural": Object {
        "camel": "users",
        "kebab": "users",
        "label": "Users",
        "pascal": "Users",
        "snake": "users",
      },
      "singular": Object {
        "camel": "user",
        "kebab": "user",
        "label": "User",
        "pascal": "User",
        "snake": "user",
      },
    },
    "references": Array [
      Object {
        "destinationSchemaId": "12345",
        "id": "0ff74f55-d3bd-4e08-9be9-48e429325f52",
        "identifiers": Object {
          "destination": Object {
            "alias": Object {
              "plural": Object {
                "camel": "directors",
                "kebab": "directors",
                "label": "Directors",
                "pascal": "Directors",
                "snake": "directors",
              },
              "singular": Object {
                "camel": "director",
                "kebab": "director",
                "label": "Director",
                "pascal": "Director",
                "snake": "director",
              },
            },
            "canonical": Object {
              "plural": Object {
                "camel": "users",
                "kebab": "users",
                "label": "Users",
                "pascal": "Users",
                "snake": "users",
              },
              "singular": Object {
                "camel": "user",
                "kebab": "user",
                "label": "User",
                "pascal": "User",
                "snake": "user",
              },
            },
          },
          "source": Object {
            "alias": Object {
              "plural": Object {
                "camel": "directedMovies",
                "kebab": "directed-movies",
                "label": "Directed Movies",
                "pascal": "DirectedMovies",
                "snake": "directed_movies",
              },
              "singular": Object {
                "camel": "directedMovie",
                "kebab": "directed-movie",
                "label": "Directed Movie",
                "pascal": "DirectedMovie",
                "snake": "directed_movie",
              },
            },
            "canonical": Object {
              "plural": Object {
                "camel": "movies",
                "kebab": "movies",
                "label": "Movies",
                "pascal": "Movies",
                "snake": "movies",
              },
              "singular": Object {
                "camel": "movie",
                "kebab": "movie",
                "label": "Movie",
                "pascal": "Movie",
                "snake": "movie",
              },
            },
          },
        },
        "sourceRelationId": "relation-example-01",
        "sourceSchemaId": "45678",
        "type": "BELONGS_TO",
      },
    ],
    "relations": Array [],
  },
  Object {
    "attributes": Array [
      Object {
        "addons": Object {
          "required": true,
        },
        "datatype": "STRING",
        "defaultValue": null,
        "id": "name-attr",
        "identifiers": Object {
          "camel": "name",
          "kebab": "name",
          "label": "Name",
          "pascal": "Name",
          "snake": "name",
        },
        "internalNote": "the name of the user",
        "locked": false,
        "source": "USER",
      },
      Object {
        "addons": Object {
          "required": true,
        },
        "datatype": "STRING",
        "defaultValue": null,
        "id": "email-attr",
        "identifiers": Object {
          "camel": "email",
          "kebab": "email",
          "label": "Email",
          "pascal": "Email",
          "snake": "email",
        },
        "internalNote": "the email of the user",
        "locked": false,
        "source": "USER",
      },
    ],
    "configuration": Object {},
    "id": "45678",
    "identifiers": Object {
      "plural": Object {
        "camel": "movies",
        "kebab": "movies",
        "label": "Movies",
        "pascal": "Movies",
        "snake": "movies",
      },
      "singular": Object {
        "camel": "movie",
        "kebab": "movie",
        "label": "Movie",
        "pascal": "Movie",
        "snake": "movie",
      },
    },
    "references": Array [],
    "relations": Array [
      Object {
        "destinationSchemaId": "12345",
        "id": "7963f9f9-24cc-473e-9eb4-b7e6e44f68fb",
        "identifiers": Object {
          "destination": Object {
            "alias": Object {
              "plural": Object {
                "camel": "directors",
                "kebab": "directors",
                "label": "Directors",
                "pascal": "Directors",
                "snake": "directors",
              },
              "singular": Object {
                "camel": "director",
                "kebab": "director",
                "label": "Director",
                "pascal": "Director",
                "snake": "director",
              },
            },
            "canonical": Object {
              "plural": Object {
                "camel": "users",
                "kebab": "users",
                "label": "Users",
                "pascal": "Users",
                "snake": "users",
              },
              "singular": Object {
                "camel": "user",
                "kebab": "user",
                "label": "User",
                "pascal": "User",
                "snake": "user",
              },
            },
          },
          "source": Object {
            "alias": Object {
              "plural": Object {
                "camel": "directedMovies",
                "kebab": "directed-movies",
                "label": "Directed Movies",
                "pascal": "DirectedMovies",
                "snake": "directed_movies",
              },
              "singular": Object {
                "camel": "directedMovie",
                "kebab": "directed-movie",
                "label": "Directed Movie",
                "pascal": "DirectedMovie",
                "snake": "directed_movie",
              },
            },
            "canonical": Object {
              "plural": Object {
                "camel": "movies",
                "kebab": "movies",
                "label": "Movies",
                "pascal": "Movies",
                "snake": "movies",
              },
              "singular": Object {
                "camel": "movie",
                "kebab": "movie",
                "label": "Movie",
                "pascal": "Movie",
                "snake": "movie",
              },
            },
          },
        },
        "sourceRelationId": "relation-example-01",
        "sourceSchemaId": "45678",
        "type": "BELONGS_TO",
      },
    ],
  },
]
`;
